--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,82 +1,4 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <title>Login Page</title>
-  <link rel="icon" type="image/jpg" href="../assets/icon.jpg">
-  <script>
-    function formatPhoneNumber(input) {
-      // Remove all characters except digits
-      var formatted = input.value.replace(/\D/g, '');
-
-      // Add hyphens at specific positions
-      if (formatted.length > 2) {
-        formatted = formatted.substring(0, 2) + '-' + formatted.substring(2);
-      }
-      if (formatted.length > 5) {
-        formatted = formatted.substring(0, 5) + '-' + formatted.substring(5);
-      }
-      if (formatted.length > 8) {
-        formatted = formatted.substring(0, 8) + '-' + formatted.substring(8);
-      }
-
-      // Update the input value
-      input.value = formatted;
-    }
-  </script>
-</head>
-
-<body>
-
-  <form action="index.Php" method="POST">
-    <label for="username">Username:</label>
-    <input type="text" id="username" placeholder="Emma" minlength="5" maxlength="10" required>
-    <br><br>
-    <label for="password">Password:</label>
-    <input type="text" id="password" placeholder="Emm#3578" minlength="10" maxlength="15" required>
-    <br><br>
-    <label for="email">Email:</label>
-    <input type="text" id="email" placeholder="emma@gmail.com">
-    <br><br>
-    <label for="phone">Phone:</label>
-    <input type="text" id="phone" placeholder="01-23-456-789" pattern="\d{2}-\d{2}-\d{3}-\d{3}" oninput="formatPhoneNumber(this)" required>
-    <br><br>
-    <label for="bday">Birthday:</label>
-    <input type="date" id="bday">
-    <br><br>
-    <label for="quantity">Quantity:</label>
-    <select id="quantity">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-        <option value="6">6</option>
-        <option value="7">7</option>
-        <option value="8">8</option>
-        <option value="9">9</option>
-    </select>
-    <br><br>
-    <label for="title">Title:</label>
-    <label for="mr">Mr.</label>
-    <input type="radio" id="mr" value="Mr" name="title">
-    <label for="mrs">Mrs.</label>
-    <input type="radio" id="mrs" value="Mrs" name="title">
-    <label for="phd">PhD.</label>
-    <input type="radio" id="phd" value="PhD" name="title">
-    <br><br>
-    <label for="Payment">Payment:</label>
-    <select id="Payment">
-      <option value="cash">cash</option>
-      <option value="mpesa">mpesa</option>
-      <option value="cheque">cheque</option>
-      <option value="mastercard">mastercard</option>
-    </select>
-    <br>
-    <button type="reset">Reset</button>
-    <br><br>
-    <button type="submit">Submit</button>
-  </form>
-</body>
-
-</html>
+<app-home-page ngSkipHydration>
+    <!-- Your content here -->
+  </app-home-page>
+  
